Fix some CSS header bugs on mobile

--- a/src/pydata_sphinx_theme/assets/styles/components/_search.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_search.scss
@@ -160,7 +160,7 @@
   }
 
   // Only the icon should be visible on narrow screens
-  :not(i) {
+  :not(svg) {
     display: none;
 
     @include media-breakpoint-up(lg) {
